# rag_knowledge_base

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/rag_knowledge_base/: __init__.py  app.py  service.py
src/rag_knowledge_base/api/: routers.py  schemas.py
src/rag_knowledge_base/core/: config.py
src/rag_knowledge_base/services/: rag.py
tests/: test_app.py  test_service.py
