[project]
name = "rag_knowledge_base"
version = "0.1.0"
description = "rag_knowledge_base"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "pyright>=1.1.370",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
known_first_party = ["rag_knowledge_base"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = "warning"
reportUnknownVariableType = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
